--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
       <span class="badge">About Us</span>
       <h2>Trusted Contracting Partner</h2>
       <p>
-        617 V and H LLC تقدم خدمات احترافية في البناء والأعمال الميدانية. فرقنا تعتمد
-        أعلى معايير السلامة والجودة واحترام الجدول الزمني مع حرص كبير على تفاصيل التنفيذ.
+        617 V and H LLC provides professional services in construction and site works.
+        Our teams uphold the highest standards of safety, quality, and scheduling,
+        with meticulous attention to detail from start to finish.
       </p>
     </div>
   </section>
@@ -78,8 +79,8 @@
       <span class="badge">Construction</span>
       <h2>General Construction & Site Work</h2>
       <p>
-        إنجاز مشاريع تسليم مفتاح، أشغال الحفر والردم، التسويات، الأساسات، وتحضير المواقع
-        للبناء. جودة متناسقة من مرحلة التخطيط إلى التسليم النهائي.
+        We deliver turnkey projects including excavation, grading, foundations,
+        and complete site preparation. Consistent quality from planning through to final delivery.
       </p>
     </div>
   </section>
@@ -93,8 +94,8 @@
       <span class="badge">Concrete</span>
       <h2>Concrete Foundations & Flatwork</h2>
       <p>
-        صب الخرسانة للأساسات، الأرضيات، الأرصفة، والجدران الاستنادية. نستخدم خلائط مطابقة
-        للمواصفات مع تقنيات تسليح ومعالجة تضمن المتانة وطول العمر.
+        We pour concrete for foundations, floors, sidewalks, and retaining walls.
+        Using high-spec mixes with reinforced techniques ensures durability and long service life.
       </p>
     </div>
   </section>
@@ -108,8 +109,8 @@
       <span class="badge">Structures</span>
       <h2>Framing & Structural Installations</h2>
       <p>
-        تنفيذ الهياكل الخشبية والمعدنية، تركيب الجسور الصغيرة والسلالم والناصر الهيكلية
-        وفق المخططات الإنشائية وبالتنسيق الكامل مع فرق التصميم.
+        We build wood and steel structures, install staircases, small bridges,
+        and other structural elements, fully aligned with engineering specifications.
       </p>
     </div>
   </section>
@@ -123,8 +124,8 @@
       <span class="badge">Delivery</span>
       <h2>Quality, Safety & On-Time Delivery</h2>
       <p>
-        إدارة جودة صارمة، التزام بمتطلبات السلامة، وتوثيق كامل. نسلم المشاريع في موعدها
-        وبالميزانية المتفق عليها مع دعم مستمر لما بعد التسليم.
+        Strict quality management, compliance with safety requirements, and thorough documentation.
+        We deliver projects on time and within budget, with continued support after completion.
       </p>
       <div class="grid">
         <div class="card">
